# devin-demo_plan

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
specs/001-windows-error-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  us3-impl-plan.md
specs/001-windows-error-analyzer/checklists/: requirements.md
specs/001-windows-error-analyzer/contracts/: cli-interface.md
src/: __init__.py  cli.py
src/analyzers/: __init__.py  correlator.py  llm_analyzer.py
src/models/: __init__.py  analysis_report.py  analysis_session.py  dump_analysis.py  event_log.py
src/parsers/: __init__.py  dump_parser.py  evtx_parser.py  windbg_parser.py
src/reporters/: __init__.py  console_reporter.py  markdown_reporter.py
src/utils/: __init__.py  config.py  filters.py  progress.py
tests/: __init__.py
tests/integration/: test_cli.py  test_cli_analyze.py
tests/unit/: test_config.py  test_dump_analysis.py  test_dump_parser.py  test_event_filters.py  test_evtx_parser_events.py  test_filters.py  test_models.py  test_parser_selection.py  test_windbg_helpers.py
